--- a/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -132,7 +132,7 @@
     <ClCompile Include="ConsoleApplication1.cpp" />
     <ClCompile Include="CreditCard.cpp" />
     <ClCompile Include="debitСards.cpp" />
-    <ClCompile Include="Manu.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="PaymentSystem.cpp" />
     <ClCompile Include="SaveData.cpp" />
   </ItemGroup>
@@ -141,6 +141,7 @@
     <ClInclude Include="Card.h" />
     <ClInclude Include="CreditCard.h" />
     <ClInclude Include="debitСards.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="PaymentSystem.h" />
     <ClInclude Include="SaveData.h" />
   </ItemGroup>
